2016-22-5  Ted Thompson  <ted@federalproductions.com>

	* MM_DockingTargets.cfg
	
2016-04-28  Ted Thompson  <ted@federalproductions.com>

	* AssemblyInfo.cs:
	* KOAS-DPCamera.cs: 

2016-04-24  Ted Thompson  <ted@federalproductions.com>

	* AssemblyInfo.cs:
	* KOAS-DPCamera.cs: 

2016-04-19  Ted Thompson  <ted@federalproductions.com>

	* KOAS-DPCamera.cs: 

2016-04-19  Ted Thompson  <ted@federalproductions.com>

	* KOAS-DPCamera.cs: 

2016-04-18  Ted Thompson  <ted@federalproductions.com>

	* AssemblyInfo.cs:
	* KOAS-DPCamera.cs: 

2016-04-17  Ted Thompson  <ted@federalproductions.com>

	* AssemblyInfo.cs:
	* KOAS-DPCamera.cs: 
