@@ -1,3 +1,7 @@
+2016-06-09  Ted Thompson  <ted@federalproductions.com>
+
+	* KOAS-DPCamera.cs: 
+
 2016-22-5  Ted Thompson  <ted@federalproductions.com>
 
 	* MM_DockingTargets.cfg
